--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "start": "NEXT_PUBLIC_SITE_ENV=production NODE_ENV=production next start",
     "start:staging": "NEXT_PUBLIC_SITE_ENV=development NODE_ENV=production next start",
     "start:static": "npx serve -s out",
-    "lint": "next lint"
+    "format": "prettier --ignore-unknown --write .",
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@newhighsco/next-plugin-svgr": "^3.0.28",
@@ -23,13 +25,20 @@
   },
   "devDependencies": {
     "@axe-core/react": "^4.3.1",
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@types/react": "^17.0.33",
+    "@typescript-eslint/eslint-plugin": "^5.58.0",
+    "@typescript-eslint/parser": "^5.58.0",
     "autoprefixer": "^10.3.7",
     "cssnano": "^4.1.11",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
+    "eslint-config-prettier": "^8.8.0",
+    "husky": "^8.0.0",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
+    "pretty-quick": "^3.1.3",
     "tailwindcss": "^2.2.17",
     "typescript": "^4.4.4"
   }
